css/style.css
/* ... */
/* Форма обратной связи */
.contacts {
  margin-bottom: 100px;
}

.contacts_title {
  margin-bottom: 48px;
}

.contacts_title-brand {
  color: var(--red-color);
}

.contacts_inner {
  display: flex;
  gap: 36px;
}

.contacts_cards {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 20px;
}

.contacts_cards-item {
  background-color: #F5F5F5;
  width: 350px;
  padding-left: 24px;
  padding-top: 24px;
  padding-bottom: 28px;
}

.contacts_cards-item-ico {
  margin-bottom: 35px;
}

.contacts_cards-item-title {
  font-size: 20px;
  margin-bottom: 16px;
}

.contacts_cards-item-title-red {
  color: var(--red-color);
}

.contacts_cards-item-text {
  opacity: 1;
}

.contacts_form {
  background-image: url(../img/contacts-form.png);
  background-color: var(--red-color);
  background-repeat: no-repeat;
  background-position: center 30px;
  padding-top: 35px;
  padding-left: 35px;
}

.contacts_form-title {
  color: white;
  margin-bottom: 32px;
}


.contacts_form-block-input {
  display: flex;
  margin-bottom: 20px;
}

.contacts_form-block-input-item {
  border: 1px white solid;
  border-radius: 3px;
  background-color: transparent;
  padding: 13px 0 14px 16px;
  width: 200px;
  outline: none;
  color: white;
  font: 15px/1.5 "Montserrat", sans-serif;
}

.contacts_form-block-input-item:nth-child(1) {
  margin-right: 10px;
}

.contacts_form-block-input-item::placeholder {
  color: white;
  font-family: "Montserrat", sans-serif;
  font-size: 15px;
  line-height: 1.5;
  font-weight: 500;

}

.contacts_form-block-textarea {
  outline: none;
  background-color: transparent;
  border: 1px solid white;
  border-radius: 3px;
  width: 410px;
  padding: 13px 0 63px 16px;
  margin-bottom: 40px;
  color: white;
  font: 15px/1.5 "Montserrat", sans-serif;
  resize: none;
}

.contacts_form-block-textarea::placeholder {
  color: white;
  font-family: "Montserrat", sans-serif;
  font-size: 15px;
  line-height: 1.5;
  font-weight: 500;
}

.contacts_form-block-button {
  padding: 15px 159px;
  background-color: white;
  color: var(--red-color);
  border: 1px solid white;
  text-decoration: none;
  border-radius: 3px;
  margin-bottom: 75px;
  display: inline-block;
  transition: 0.8s;
}

.contacts_form-block-button:hover {
  opacity: 0.7;
  transition: 0.8s;
}

.contacts_form-block-text {
  color: white;
  opacity: 0.5;
  width: 265px;
  font-size: 12px;
}

.contacts_br-hid {
  display: none;
}

.contacts_policy {
  text-decoration: underline;
}

.contacts_img {
  display: none;
}

@media screen and (max-width:1280px) {
  .contacts {
    margin-bottom: 60px;
  }

  .contacts_inner {
    flex-direction: column;
  }

  .contacts_cards {
    justify-items: center;
    gap: 8px;
    grid-template-columns: 350px 350px;
    margin: 0 auto;
  }

  .contacts_title {
    text-align: center;
  }

  .contacts_form {
    margin: 0 auto;
    background-position: top right;
    background-image: url(../img/contacts-form780.png);
    width: 708px;
    padding-bottom: 26px;
  }

  .contacts_form-block-textarea {
    width: 644px;
    margin-bottom: 20px;
  }

  .contacts_br {
    display: none;
  }

  .contacts_cards-item {
    width: 328px;
    padding: 24px 32px 32px 24px;
  }

  .contacts_form-block-input {
    margin-bottom: 10px;
  }

  .contacts_form-block-input-item {
    width: 298px;
  }

  .contacts_form-block-input-item:nth-child(2) {
    width: 335px;
  }

  .contacts_form-block-button {
    padding: 15px 312px 15px 240px;
    margin-bottom: 32px;
  }

  .contacts_form-block-text {
    margin-left: 50px;
    width: 539px;
    text-align: center;
  }

  .contacts_br-hid {
    display: inline;
  }

  .break {
    display: block;
  }
}

@media screen and (max-width:720px) {
  .contacts_cards {
    grid-template-columns: repeat(1, 1fr);
    gap: 10px;
  }

  .contacts_title {
    margin-bottom: 32px;
    font-size: 28px;
    margin-left: 16px;
  }

  .contacts_form {
    width: 328px;
    padding: 20px;
  }

  .contacts_form-block-input {
    flex-direction: column;
  }

  .contacts_form-block-input-item:nth-child(1) {
    width: 288px;
    margin-right: 0;
  }

  .contacts_form-block-input-item:nth-child(2) {
    width: 288px;
  }

  .contacts_form-title {
    font-size: 28px;
  }

  .contacts_form-block-textarea {
    width: 288px;
  }

  .contacts_form-block-button {
    padding: 15px 98px;
  }

  .contacts_form-block-text {
    width: 265px;
    text-align: left;
    margin-left: 0;
  }

  .break {
    display: inline;
  }
}

@media screen and (max-width: 420px) {
  .contacts_title {
    text-align: start;
  }
}

@media screen and (max-width: 380px) {
  .contacts {
    position: relative;
  }

  .contacts_img {
    display: block;
    position: absolute;
    right: 0;
    bottom: 370px;
  }

  .contacts_form {
    background-image: none;
  }
}

/* Как мы работаем */
.process {
  margin-bottom: 100px;
}

.process_title {
  margin-bottom: 48px;
}

.process_block {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: 20px;
  align-items: start;
}

.process_block-card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 24px;
  position: relative;
  text-align: center;
}

.process_block-card::after {
  content: "";
  position: absolute;
  left: calc(100% + var(--gap)/2 - var(--arrow-w)/2 - 10px);
  bottom: calc(-1 * var(--arrow-h)/2 - var(--arrow-shift));
  width: var(--arrow-w);
  height: var(--arrow-h);
  pointer-events: none;
  z-index: 2;
}

.process_block-card:nth-child(odd)::after {
  background: url("../img/arrow1.svg") center/contain no-repeat;
}

.process_block-card:nth-child(even) {
  --arrow-w: 134px;
  --arrow-h: 63px;
}

.process_block-card:nth-child(even)::after {
  background-image: url("../img/arrow2.svg");
}

.process_block-card:last-child::after {
  display: none;
}
/* ... */

